--- a/client/public/index.html
+++ b/client/public/index.html
@@ -35,5 +35,9 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/6643a43fc5.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
